--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Twilio Video Demo</title>
+    <title>Twilio Pictionary</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://sdk.twilio.com/js/video/releases/2.26.0/twilio-video.min.js"></script>
     <script src="https://sdk.twilio.com/js/sync/releases/3.0.1/twilio-sync.min.js"></script>
@@ -14,7 +14,7 @@
 </head>
 
 <body class="bg-dark">
-    <nav class="navbar sticky-top" style="background-color: #000000;">
+    <nav class="navbar sticky-top" >
         <div class="container-fluid row pt-1">
             <div class="col-4">
                 <div class="row">
@@ -30,13 +30,13 @@
                         </label>
                     </div>
 
-                    <div class="col-2 ">
+                    <div class="col-2">
                         <div id="pencil-color" class="mt-1 border border-light"
                             style="height: 5vh;width: 5vh; ;background-color: black;"></div>
                     </div>
 
-                    <div class="col-3 ">
-                        <div class="row row-cols-4 border" style="height: 100%;">
+                    <div class="col-3">
+                        <div class="row row-cols-4 border colorpick" >
                             <btn class="col btn rounded-0 btn-set-color" style="background-color: gray;">
                             </btn>
                             <btn class="col btn rounded-0 btn-set-color" style="background-color: yellow;">
@@ -57,7 +57,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-3  ">
+            <div class="col-3">
                 <h5 class="text-light" id="txt-generated-word">Pictionary word</h5>
             </div>
             <div class="col-2">
@@ -69,14 +69,14 @@
             </div>
         </div>
     </nav>
-    <div class="container-fluid bg-dark" style="height: 100vh;">
+    <div class="container-fluid bg-dark container-canvas-webcam">
         <div class="row pt-3">
             <div class="col-9" id="whiteboard-container">
                 <canvas id="whiteboard">
                 </canvas>
             </div>
-            <div class="col-3" style="height: 80vh;">
-                <div class="overflow-scroll" id="webcam-feed-container" style="height: 80vh;"></div>
+            <div class="col-3 webcam-feed-col">
+                <div class="overflow-scroll" id="webcam-feed-container"></div>
             </div>
 
         </div>
